fix(components/dialogs): overflow issue for FF
https://stackoverflow.com/questions/28636832/firefox-overflow-y-not-working-with-nested-flexbox/28639686#28639686

--- a/packages/application-components/src/components/dialogs/internals/dialog-styles.mod.css
+++ b/packages/application-components/src/components/dialogs/internals/dialog-styles.mod.css
@@ -47,11 +47,6 @@
         / var(--spacing-32) 1fr var(--spacing-32);
 }
 
-/* For the scale size, we want the card to stretch to 100% height */
-.modal-content-scale .dialog-card {
-  height: 100%;
-}
-
 .grid-area-top {
   grid-area: top;
 }
@@ -68,6 +63,16 @@
   grid-area: bottom;
 }
 
+/* For the scale size, we want the card to stretch to 100% height */
+.modal-content-scale .dialog-card {
+  height: 100%;
+}
+
+.dialog-card {
+  /* Ref: https://stackoverflow.com/questions/28636832/firefox-overflow-y-not-working-with-nested-flexbox/28639686#28639686 */
+  min-height: 0;
+}
+
 .dialog-card > div {
   display: flex;
   flex-direction: column;
@@ -75,6 +80,24 @@
   /* For the actual container with the content, we need to use normal pointer
   events so that clicking on it does not close the dialog. */
   pointer-events: auto;
+
+  /* Ref: https://stackoverflow.com/questions/28636832/firefox-overflow-y-not-working-with-nested-flexbox/28639686#28639686 */
+  min-height: 0;
+}
+
+/* NOTE: this is exactly like the `<Spacings.Stack>` component, except that
+we need to pass the extra property `min-height`. */
+.dialog-card-spacer {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+
+  /* Ref: https://stackoverflow.com/questions/28636832/firefox-overflow-y-not-working-with-nested-flexbox/28639686#28639686 */
+  min-height: 0;
+}
+
+.dialog-card-spacer > * + * {
+  margin: var(--spacing-16) 0 0;
 }
 
 .dialog-container {
